Fixes clear issue with nav and .main, and fixes overflow issue with dropdown menus

--- a/style.less
+++ b/style.less
@@ -60,12 +60,7 @@ a.header-donate {
 }
 
 /***** nav styles *****/
-
-div.nav-wrap {
-  overflow: hidden;
-}
 nav.main-nav {
-  overflow: hidden;
   background: tint(grey, 60%);
   background-image:url(images/nav-background-lines.png);
   max-width: 1180px;
@@ -130,7 +125,9 @@ div.menu-main-menu-container ul li ul li {
   display: block; 
   color: #fff;
 }
+
 div.menu-main-menu-container ul li ul li:hover { background: #666; }
+
 div.menu-main-menu-container ul li:hover ul {
   display: block;
   opacity: 1;
@@ -140,6 +137,7 @@ div.menu-main-menu-container ul li:hover ul {
 /******** .main styles **********/
 
 .main {
+  clear: both;
   padding: 20px 10px 0 10px;
   max-width: 1180px;
   margin: 0 auto;
